--- a/triangulation_robotic_cal/Triangulation of Robotic.ipynb
+++ b/triangulation_robotic_cal/Triangulation of Robotic.ipynb
@@ -13,7 +13,9 @@
    "id": "77363ee9",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf1.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf1.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -21,7 +23,9 @@
    "id": "7ccd56d2",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf2.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf2.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -29,7 +33,9 @@
    "id": "bf92808c",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf3.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf3.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -37,7 +43,9 @@
    "id": "28962464",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf4.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf4.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -45,7 +53,9 @@
    "id": "d2c3ea36",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf5.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf5.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -53,7 +63,9 @@
    "id": "ca81a104",
    "metadata": {},
    "source": [
-    "![title](./checkpoint9_tf6.jpg)"
+    "<div>\n",
+    "<img src=\"checkpoint9_tf6.jpg\" width=\"800\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -527,6 +539,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72d7b7bd-9725-4386-9935-16d49314476c",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"cart_frame_direction1.jpg\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ff6bc15-19a8-4f6a-a071-13e4dd6e8838",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"cart_frame_direction2.jpg\" width=\"800\"/>\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "66ecd940",
@@ -556,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "511ee4b6",
    "metadata": {},
    "outputs": [
@@ -579,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "1a1cae7a",
    "metadata": {},
    "outputs": [
@@ -602,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "1c0d2bf1",
    "metadata": {},
    "outputs": [
